--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.1",
     "gsap": "^3.12.2",
     "gsap-react-plugin": "^1.0.2",
